--- a/chat.html
+++ b/chat.html
@@ -58,7 +58,7 @@
 		width: 32px !important;
 		height: 32px !important;
 		background-color: white !important;
-		background-image: url("https://megaport--peeklogicd.sandbox.my.site.com/einsteinSupport/resource/1758619710000/MegaportLogoSVG") !important;
+		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/einsteinSupport/resource/1762267521000/MegaportLogoSVG") !important;
 		background-size: 24px 24px !important;
 		background-repeat: no-repeat !important;
 		background-position: center !important;
@@ -116,7 +116,7 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:hover:before,
 	.embeddedServiceHelpButton .helpButton .uiButton:focus:before {
 		background-color: white !important;
-		background-image: url("https://megaport--peeklogicd.sandbox.my.site.com/einsteinSupport/resource/1758619710000/MegaportLogoSVG") !important;
+		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/einsteinSupport/resource/1762267521000/MegaportLogoSVG") !important;
 		filter: none !important;
 		opacity: 1 !important;
 		mix-blend-mode: normal !important;
@@ -243,7 +243,7 @@
 		width: 32px !important;
 		height: 32px !important;
 		background-color: white !important;
-		background-image: url("https://megaport--peeklogicd.sandbox.my.site.com/einsteinSupport/resource/1758619710000/MegaportLogoSVG") !important;
+		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/einsteinSupport/resource/1762267521000/MegaportLogoSVG") !important;
 		background-size: 24px 24px !important;
 		background-repeat: no-repeat !important;
 		background-position: center !important;
@@ -260,7 +260,7 @@
 	:host .minimizedContainer:focus:before,
 	.embeddedServiceSidebar .minimizedContainer:hover:before {
 		background-color: white !important;
-		background-image: url("https://megaport--peeklogicd.sandbox.my.site.com/einsteinSupport/resource/1758619710000/MegaportLogoSVG") !important;
+		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/einsteinSupport/resource/1762267521000/MegaportLogoSVG") !important;
 		filter: none !important;
 		opacity: 1 !important;
 		mix-blend-mode: normal !important;
@@ -942,7 +942,7 @@ div.endChatContainer button:last-child {
 	};
 	// Function to get device type based on screen width
 	function getDeviceType() {
-		console.log('added greetingMessageClosed');
+		console.log('added testing');
 		var screenWidth = window.innerWidth;
 		if (screenWidth <= 768) return 'mobile';
 		if (screenWidth <= 1024) return 'tablet';
@@ -1249,7 +1249,7 @@ div.endChatContainer button:last-child {
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 		
 		embedded_svc.settings.loadingText = 'Connecting to support...'; // Custom loading message
-		embedded_svc.settings.chatbotAvatarImgURL = "https://megaport--peeklogicd.sandbox.my.site.com/einsteinSupport/resource/1758619710000/MegaportLogoSVG";
+		embedded_svc.settings.chatbotAvatarImgURL = "https://megaport--pldschatdt.sandbox.my.site.com/einsteinSupport/resource/1762267521000/MegaportLogoSVG";
 
 		// Set initial dimensions
 		var currentDeviceType = getDeviceType();
@@ -1441,27 +1441,25 @@ div.endChatContainer button:last-child {
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.init(
-			'https://megaport--peeklogicd.sandbox.my.salesforce.com',
-			'https://megaport--peeklogicd.sandbox.my.site.com/einsteinSupport',
+			'https://megaport--pldschatdt.sandbox.my.salesforce.com',
+			'https://megaport--pldschatdt.sandbox.my.site.com/einsteinSupport',
 			gslbBaseURL,
-			'00DH30000000naQ',
+			'00D8r000009Fsyz',
 			'Support_queue',
 			{
 				baseLiveAgentContentURL: 'https://c.la12s-core1.sfdc-vwfla6.salesforceliveagent.com/content',
 				deploymentId: '5726F000000HVqE',
-				buttonId: '5739n000000dMIP',
+				buttonId: '5738r0000019Ker',
 				baseLiveAgentURL: 'https://d.la12s-core1.sfdc-vwfla6.salesforceliveagent.com/chat',
 				eswLiveAgentDevName: 'Support_queue',
 				isOfflineSupportEnabled: true
 			}
 		);
-
-
 	};
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
-		s.setAttribute('src', 'https://megaport--peeklogicd.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.setAttribute('src', 'https://megaport--pldschatdt.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 		s.onload = function() {
 			initESW(null);
 		};
