--- a/chat.html
+++ b/chat.html
@@ -58,7 +58,7 @@
 		width: 32px !important;
 		height: 32px !important;
 		background-color: white !important;
-		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1762267521000/MegaportLogoSVG") !important;
+		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1758619710000/MegaportLogoSVG") !important;
 		background-size: 24px 24px !important;
 		background-repeat: no-repeat !important;
 		background-position: center !important;
@@ -116,7 +116,7 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:hover:before,
 	.embeddedServiceHelpButton .helpButton .uiButton:focus:before {
 		background-color: white !important;
-		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1762267521000/MegaportLogoSVG") !important;
+		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1758619710000/MegaportLogoSVG") !important;
 		filter: none !important;
 		opacity: 1 !important;
 		mix-blend-mode: normal !important;
@@ -243,7 +243,7 @@
 		width: 32px !important;
 		height: 32px !important;
 		background-color: white !important;
-		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1762267521000/MegaportLogoSVG") !important;
+		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1758619710000/MegaportLogoSVG") !important;
 		background-size: 24px 24px !important;
 		background-repeat: no-repeat !important;
 		background-position: center !important;
@@ -260,7 +260,7 @@
 	:host .minimizedContainer:focus:before,
 	.embeddedServiceSidebar .minimizedContainer:hover:before {
 		background-color: white !important;
-		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1762267521000/MegaportLogoSVG") !important;
+		background-image: url("https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1758619710000/MegaportLogoSVG") !important;
 		filter: none !important;
 		opacity: 1 !important;
 		mix-blend-mode: normal !important;
@@ -942,7 +942,7 @@ div.endChatContainer button:last-child {
 	};
 	// Function to get device type based on screen width
 	function getDeviceType() {
-		console.log('added new bot configs');
+		console.log('added site urls');
 		var screenWidth = window.innerWidth;
 		if (screenWidth <= 768) return 'mobile';
 		if (screenWidth <= 1024) return 'tablet';
@@ -1249,7 +1249,7 @@ div.endChatContainer button:last-child {
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 		
 		embedded_svc.settings.loadingText = 'Connecting to support...'; // Custom loading message
-		embedded_svc.settings.chatbotAvatarImgURL = "https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1762267521000/MegaportLogoSVG";
+		embedded_svc.settings.chatbotAvatarImgURL = "https://megaport--pldschatdt.sandbox.my.site.com/salesChatSupport/resource/1758619710000/MegaportLogoSVG";
 
 		// Set initial dimensions
 		var currentDeviceType = getDeviceType();
@@ -1436,6 +1436,9 @@ div.endChatContainer button:last-child {
 			console.log('Chat closed - state cleared');
 		});
 
+
+		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.init(
 			'https://megaport--pldschatdt.sandbox.my.salesforce.com',
